--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,8 @@ gradle.properties
 
 # Common working directory
 run/
+# Haha
+server/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
