arena pasting i hate we api

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,7 @@ commands:
     description: Reloads the speedrun config
     usage: /speedrun-reload
     permission: group.admin
+  loadstructures:
+    description: Loads the speedrun structures
+    usage: /loadstructures
+    permission: group.admin
