--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,7 +12,7 @@ commands:
   start:
     description: Starts the game
     usage: /start
-    permission: group.contentcreator
+    permission: group.contentcreator, group.coder
   speedrun-reload:
     description: Reloads the speedrun config
     usage: /speedrun-reload
@@ -24,3 +24,8 @@ commands:
   renew:
     description: Renew
     usage: /renew
+
+libraries:
+  - "net.axay:kspigot:1.17.2"
+  - "org.jetbrains.kotlin:kotlin-reflect:1.5.21"
+  - "de.hglabor:hglabor-utils:0.0.12"
