--- a/.github/workflows/gradlew_build.yml
+++ b/.github/workflows/gradlew_build.yml
@@ -29,3 +29,11 @@ jobs:
       run: java -jar BuildTools.jar --rev 1.16.5 --compile CRAFTBUKKIT
     - name: Build
       run: ./gradlew build
+    - name: Release
+      uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
+        prerelease: true
+        title: "Development Build"
+        files: build/libs/*.jar
