--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Kotlin gradle spigot plugin with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Gradlew Build
+name: Build
 
 on:
   push:
@@ -23,10 +20,6 @@ jobs:
         distribution: 'adopt'
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Get BuildTools
-      run: wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-    - name: Compile Craftbukkit
-      run: java -jar BuildTools.jar --rev 1.17 --compile CRAFTBUKKIT
     - name: Build
       run: ./gradlew build
     - name: Release
