use gradle-cache-action & remove dev jar

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: Build
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: push
 
 jobs:
   build:
@@ -13,15 +9,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
         java-version: '16'
         distribution: 'adopt'
+    
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build
-      run: ./gradlew build
+      uses: burrunan/gradle-cache-action@v1
+      with:
+        arguments: build
+    
+    - name: Remove dev jar
+      run: rm build/libs/*dev*.jar
+
     - name: Release
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
